--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "superjson": "1.12.2",
+    "swiper": "^9.4.1",
     "zod": "^3.21.4"
   },
   "devDependencies": {
