--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-icons": "^4.10.1",
     "superjson": "1.12.2",
     "swiper": "^9.4.1",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "zod": "^3.21.4"
   },
   "devDependencies": {
