--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@clerk/nextjs": "^4.21.12",
     "@prisma/client": "^4.14.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "@t3-oss/env-nextjs": "^0.3.1",
     "@tanstack/react-query": "^4.29.7",
     "@trpc/client": "^10.26.0",
@@ -24,6 +25,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-redux": "^8.1.1",
+    "redux": "^4.2.1",
     "superjson": "1.12.2",
     "swiper": "^9.4.1",
     "tailwind-scrollbar-hide": "^1.1.7",
